samples/_failures_safe/1761322328_0192ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7eb5e3c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_b7eb5e3c.c:141:17: error: expected ‘;’ at end of input
  141 |             heap
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b7eb5e3c.c:141:13: error: expected declaration or statement at end of input
  141 |             heap
      |             ^~~~
./samples/SAFE/__tmp_b7eb5e3c.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7eb5e3c.c:141:13: error: expected declaration or statement at end of input
